# microservices_py_compiler

./: .gitignore  CMakeLists.txt  IBlock.cpp  LICENSE  TestCase.h  blockparser.cpp  blockparser.h  codegenerator.cpp  codegenerator.h  conditionalblock.cpp  conditionalblock.h  example.json  funcinputblock.cpp  funcinputblock.h  helloworldblock.cpp  helloworldblock.h  inputargument.cpp  inputargument.h  json_parser.cpp  json_parser.h  main.cpp  returnblock.cpp  returnblock.h  runner.cpp  runner.h  test_example.json  testparser.cpp  testparser.h  whileblock.cpp
Blocks/: ConditionBlock.cpp  ConditionBlock.h  FunctionBlock.cpp  FunctionBlock.h  IBlock.cpp  IBlock.h  ReturnBlock.cpp  SimpleBlock.cpp  SimpleBlock.h  WhileBlock.cpp  WhileBlock.h
